added index.html and added a back home link in each exercise

--- a/exercise2.html
+++ b/exercise2.html
@@ -7,6 +7,7 @@
     <title>Exercise 2</title>
 </head>
 <body>
+    <p><a href="index.html">Back Home</a></p>
     <h1>Jean's Website</h1>
     <hr>
 
