--- a/exercise3.html
+++ b/exercise3.html
@@ -7,6 +7,7 @@
     <title>Exercise 3</title>
 </head>
 <body>
+    <p><a href="index.html">Back Home</a></p>
     <h1>Today's News</h1>
 
     <!--Vape Bill News-->
