--- a/exercise4.html
+++ b/exercise4.html
@@ -7,6 +7,7 @@
     <title>Exercise 4</title>
 </head>
 <body>
+    <p><a href="index.html">Back Home</a></p>
     <h1><i>Learning PRE and CODE Tags</i></h1>
     <hr>
     <h3>Pre Tag:</h3>
