--- a/exercise1.html
+++ b/exercise1.html
@@ -7,6 +7,7 @@
     <title>Exercise 1</title>
 </head>
 <body>
+    <p><a href="index.html">Back Home</a></p>
     <h1>Today's News</h1>
 
     <!--Main News1-->
