--- a/exercise5.html
+++ b/exercise5.html
@@ -7,6 +7,7 @@
     <title>Exercise 5</title>
 </head>
 <body>
+    <p><a href="index.html">Back Home</a></p>
     <h1>Web Development Training</h1>
     <p>Email: jeanaltarejos@yahoo.com</p>
     <p>Mobile Number: +63 977 386 1398</p>
