--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="css/style.css"/>
     <title>KodeGo Exercises - Jean M. Altarejos</title>
 </head>
+
+
 <body>
-    <h1>KodeGo Exercises by Jean M Altarejos</h1>
-    <ul>
-        <li><a href="exercise1.html">Exercise 1</a></li>
-        <li><a href="exercise2.html">Exercise 2</a></li>
-        <li><a href="exercise3.html">Exercise 3</a></li>
-        <li><a href="exercise4.html">Exercise 4</a></li>
-        <li><a href="exercise5.html">Exercise 5</a></li>
-    </ul>
+    <div class="container">
+        <h1 id="title-text">KodeGo Exercises by Jean M Altarejos</h1>
+        <ul>
+            <li><a href="exercise1.html">Exercise 1</a></li>
+            <li><a href="exercise2.html">Exercise 2</a></li>
+            <li><a href="exercise3.html">Exercise 3</a></li>
+            <li><a href="exercise4.html">Exercise 4</a></li>
+            <li><a href="exercise5.html">Exercise 5</a></li>
+        </ul>
+    </div>
+    
 </body>
 </html>
