--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="exercise3.html">Exercise 3</a></li>
             <li><a href="exercise4.html">Exercise 4</a></li>
             <li><a href="exercise5.html">Exercise 5</a></li>
+            <li><a href="exercise9.html">Exercise 9</a></li>
         </ul>
     </div>
     
