update index.html added exercises link

--- a/basic-css.html
+++ b/basic-css.html
@@ -8,6 +8,7 @@
 		<title>Exercise 9: Basic CSS</title>
 	</head>
 	<body>
+        <button type="button" href="index.html">Back Home</button>
 		<main>
 			<h1 class="main-heading">The Complete Guide To CSS Selectors</h1>
 			<article class="articles">
