--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <li><a href="exercise3.html">Exercise 3</a></li>
             <li><a href="exercise4.html">Exercise 4</a></li>
             <li><a href="exercise5.html">Exercise 5</a></li>
+            <li><a href="exercise5.html">Exercise 5</a></li>
+            <li><a href="exercise6.html">Exercise 5</a></li>
+            <li><a href="exercise7.html">Exercise 5</a></li>
+            <li><a href="exercise8.html">Exercise 5</a></li>
             <li><a href="exercise9.html">Exercise 9</a></li>
+            <li><a href="basic-css.html">Exercise 5</a></li>
         </ul>
     </div>
     
