added boxmodel and position proj html

--- a/box-model.html
+++ b/box-model.html
@@ -5,30 +5,30 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Box Model</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
 		<header>
 			<h1>Viareggio new Pisa (italy), 5 April 1903</h1>
 		</header>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
+		<nav class="navbar">
+			<ul class="main-nav">
+				<li class="navlist"><a href="#">Home</a></li>
+				<li class="navlist"><a href="#">About</a></li>
+				<li class="navlist"><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<hr>
 		<aside class="aleft">
 			<figure>
-				<img src="../BoxPrj/img/book2jpg.jpg" alt="">
+				<img class="book2-img" src="assets/img/book2jpg.jpg" alt="">
 				<figcaption>Books</figcaption>
 			</figure>
 			<div>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+				<ul class="sub-nav">
+					<li class="sublist"><a href="#">Home</a></li>
+					<li class="sublist"><a href="#">About</a></li>
+					<li class="sublist"><a href="#">Contact</a></li>
 
 				</ul>
 			</div>
@@ -75,14 +75,14 @@
 						</p>
 					</div>
 				</p>
-				<p>
+			<p>
 					#End of Article
 				</p>
 
 			</section>
 			<aside class="aright">
 				<figure>
-					<img src="../BoxPrj/img/Kali.jpg" alt="">
+					<img class="kali-img" src="assets/img/Kali.jpg" alt="">
 					<figcaption>Sports</figcaption>
 				</figure>
 				<div>
