--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <li><a href="exercise8.html">Exercise 8</a></li>
             <li><a href="exercise9.html">Exercise 9</a></li>
             <li><a href="basic-css.html">Basic CSS</a></li>
-            <li><a href="box-model.html">Basic CSS</a></li>
-            <li><a href="positioning-proj.html">Basic CSS</a></li>
+            <li><a href="box-model.html">Box Model</a></li>
+            <li><a href="positioning-proj.html">CSS Positioning</a></li>
         </ul>
     </div>
     
