--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <div class="container">
             <h3>JavaScript</h3>
             <ul>
-                <li><a href="/css-exer/basic-css.html">Basic CSS</a></li>
-                <li><a href="/css-exer/box-model.html">Box Model</a></li>
-                <li><a href="/css-exer/positioning-proj.html">CSS Positioning</a></li>
+                <li><a href="/javascript-exer/grocery/grocery.html">Grocery List</a></li>
+                <li><a href="/javascript-exer/while/while.html">To Do List</a></li>
+                <li><a href="/javascript-exer/odd-or-even/oddeven.html">Odd or Even</a></li>
+                <li><a href="/javascript-exer/temperature/temperature.html">Temperature</a></li>
             </ul>
         </div>
 
