--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
             <h3>JavaScript</h3>
             <ul>
-                <li><a href="/javascript-exer/grocery/grocery.html">Grocery List</a></li>
+                <li><a href="../javascript-exer/grocery/grocery.html">Grocery List</a></li>
                 <li><a href="/javascript-exer/while/while.html">To Do List</a></li>
                 <li><a href="/javascript-exer/odd-or-even/oddeven.html">Odd or Even</a></li>
                 <li><a href="/javascript-exer/temperature/temperature.html">Temperature</a></li>
